<resources>
    <string name="app_name">Estimar</string>
    <string name="get_started">Get Started</string>
    <string name="calculate">Calculate</string>
    <string name="total_cost_0_0">Total Cost: $0.0</string>
    <string name="cement_price_php">Cement Price (PHP)</string>
    <string name="total_cost_php_0_0">Total Cost: PHP 0.0</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="todo">TODO</string>
    <string name="calculation_history_n">Calculation History:\n</string>
    <string name="secondsem">TODO</string>
    <string name="construction_cost_estimator_calculator">Construction Cost Estimator Calculator</string>
    <string name="your_calculation_results_go_here" />
    <string name="select_construction_type" />
    <string name="estimate_description">Cost Estimate</string>
    <string name="estimate_construction_costs_with_machine_learning">Estimate Construction Costs with Machine Learning</string>
    <string name="clear">clear</string>
    <string name="reset">↺</string>
    <string name="show_more">show more</string>
    <string name="cement_cost">Cement Cost:</string>
    <string name="sand_cost">Sand Cost:</string>
    <string name="gravel_cost">Gravel Cost:</string>
    <string name="chb_cost">CHB Cost:</string>
    <string name="cement_cost_php_0_0">Cement Cost: PHP 0.0</string>
    <string name="sand_cost_php_0_0">Sand Cost: PHP 0.0</string>
    <string name="gravel_cost_php_0_0">Gravel Cost: PHP 0.0</string>
    <string name="chb_cost_cost_php_0_0">CHB Cost Cost: PHP 0.0</string>
    <string name="chb_cost_php_0_0">CHB Cost PHP 0.0:</string>
    <string name="other_costs_php_0_0">Other Costs: PHP 0.0</string>
    <string name="bg">bg</string>
    <string name="cement_quantity">cement quantity:</string>
    <string name="chb_quantity">chb quantity:</string>
    <string name="gravel_quantity">gravel quantity:</string>
    <string name="sand_quantity">sand quantity:</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="f1_1">F1</string>
    <string name="f2_1">F2</string>
    <string name="f3">F3</string>
    <string name="labor_cost_php_0_0">Labor Cost: PHP 0.0</string>
</resources>